--- a/scss/dashboard/pages/_all-pages.scss
+++ b/scss/dashboard/pages/_all-pages.scss
@@ -638,7 +638,6 @@
 
 .calendar-view {
     background: #fff;
-    padding: 20px;
 }
 
 
